--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
   }
 
   // Здесь подставь свои URL вебхуков Discord:
-  const DISCORD_WEBHOOK_URL_GREEN = 'YOUR_DISCORD_WEBHOOK_URL_GREEN';
-  const DISCORD_WEBHOOK_URL_RED = 'YOUR_DISCORD_WEBHOOK_URL_RED';
+  const DISCORD_WEBHOOK_URL_GREEN = 'https://discord.com/api/webhooks/1400575916534530141/JEB23DFLpB0tjbSLxIrTUKFp4TIZDca_UKibt3zI3VTNasovMzZSS-7pV9k5YjhDNTMQ';
+  const DISCORD_WEBHOOK_URL_RED = 'https://discord.com/api/webhooks/1400575916534530141/JEB23DFLpB0tjbSLxIrTUKFp4TIZDca_UKibt3zI3VTNasovMzZSS-7pV9k5YjhDNTMQ';
 
   async function sendToDiscord(webhookUrl, content, username, imageBase64) {
     const payload = {
