--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Объявления</title>
+<title>Объявления </title>
 <style>
-  /* Стили оставляем без изменений (как в предыдущем коде) */
   body {
     font-family: Arial, sans-serif;
     margin: 20px;
@@ -159,9 +158,9 @@
     font-weight: 600;
   }
   #nicknameInput {
-  width: 150px;
-  height: 30px;
-  font-size: 14px;
+  width: 150px;       /* фиксированная небольшая ширина */
+  height: 30px;       /* высота поменьше */
+  font-size: 14px;    /* чуть поменьше шрифт */
   padding: 4px 8px;
   margin-bottom: 20px;
   border-radius: 5px;
@@ -201,249 +200,77 @@
 <audio id="toastSound" src="https://actions.google.com/sounds/v1/cartoon/magic_chime.ogg"></audio>
 
 <script>
-  const nicknameInput = document.getElementById('nicknameInput');
-  nicknameInput.value = localStorage.getItem('nickname') || '';
-  nicknameInput.addEventListener('input', () => {
-    localStorage.setItem('nickname', nicknameInput.value);
-  });
-
-  function showToast(message = "✅ Отправлено!") {
-    const toast = document.getElementById("toast");
-    toast.textContent = message;
-    toast.classList.add("show");
-    document.getElementById("toastSound").play();
-    setTimeout(() => {
-      toast.classList.remove("show");
-    }, 3000);
-  }
-
-  function formatDateTime(date) {
-    return date.toLocaleString('ru-RU', {
-      year: 'numeric', month: '2-digit', day: '2-digit',
-      hour: '2-digit', minute: '2-digit', second: '2-digit'
-    });
-  }
-
-  let announcementCounter = parseInt(localStorage.getItem('announcementCounter')) || 0;
-
-  function extractImageFromPaste(e, previewElement) {
-    const items = (e.clipboardData || e.originalEvent.clipboardData).items;
-    let imageFound = false;
-    for (const item of items) {
-      if (item.type.indexOf("image") === 0) {
-        const blob = item.getAsFile();
-        const URLObj = window.URL || window.webkitURL;
-        const source = URLObj.createObjectURL(blob);
-        previewElement.innerHTML = `<img src="${source}" class="image-preview" />`;
-        imageFound = true;
-        break;
-      }
-    }
-    if (!imageFound) {
-      previewElement.innerHTML = '';
-    }
-  }
-
-  function createAnnouncement(text, imgSrc, nickname, date, isGreen) {
-    announcementCounter++;
-    localStorage.setItem('announcementCounter', announcementCounter);
-
-    const div = document.createElement('div');
-    div.classList.add('announcement');
-    div.classList.add(isGreen ? 'green-announcement' : 'red-announcement');
-
-    const nickLine = document.createElement('div');
-    nickLine.textContent = `#${announcementCounter} Ник: ${nickname || 'Гость'}`;
-    nickLine.style.fontWeight = '700';
-    div.appendChild(nickLine);
-
-    const textLine = document.createElement('div');
-    textLine.textContent = text;
-    div.appendChild(textLine);
-
-    if (imgSrc) {
-      const img = document.createElement('img');
-      img.src = imgSrc;
-      img.className = 'image-preview';
-      div.appendChild(img);
-    }
-
-    const metaLine = document.createElement('div');
-    metaLine.className = 'meta';
-    metaLine.textContent = `Отправлено: ${formatDateTime(date)}`;
-    div.appendChild(metaLine);
-
-    return div;
-  }
-
-  // Здесь подставь свои URL вебхуков Discord:
-  const DISCORD_WEBHOOK_URL_GREEN = 'https://discord.com/api/webhooks/1400575916534530141/JEB23DFLpB0tjbSLxIrTUKFp4TIZDca_UKibt3zI3VTNasovMzZSS-7pV9k5YjhDNTMQ';
-  const DISCORD_WEBHOOK_URL_RED = 'https://discord.com/api/webhooks/1400575916534530141/JEB23DFLpB0tjbSLxIrTUKFp4TIZDca_UKibt3zI3VTNasovMzZSS-7pV9k5YjhDNTMQ';
-
-  async function sendToDiscord(webhookUrl, content, username, imageBase64) {
-    const payload = {
-      username: username,
-      content: content,
-    };
-
-    if (imageBase64) {
-      // Отправляем изображение через embed
-      payload.embeds = [{
-        image: {
-          url: imageBase64
-        }
-      }];
-    }
-
-    // Отправляем POST запрос
-    try {
-      const response = await fetch(webhookUrl, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(payload),
-      });
-      if (!response.ok) throw new Error('Ошибка отправки в Discord');
-    } catch (err) {
-      alert('Не удалось отправить сообщение в Discord: ' + err.message);
-      throw err;
-    }
-  }
-
-  // Конвертация изображения из src в base64 для отправки (т.к. webhook не принимает local URL, надо использовать файл или ссылку)
-  // К сожалению, прямое использование blob url не работает, поэтому можно либо отправить только текст + ник,
-  // либо добавить поле для вставки ссылки на картинку, либо использовать upload API Discord (требует авторизацию)
-  // Для простоты — отправим текст и ник, а если есть картинка — напишем "Изображение приложено локально" (т.к. прямое прикрепление через webhook без сервера — невозможно).
-  // Можно заменить на загрузку картинки куда-то (imgur и т.п.) и получить ссылку, но это сложнее.
+  // ... остальной код без изменений
 
   async function sendAnnouncement(isGreen) {
     const textArea = isGreen ? document.getElementById('greenInput') : document.getElementById('redInput');
     const preview = isGreen ? document.getElementById('greenPreview') : document.getElementById('redPreview');
     const announcementsContainer = isGreen ? document.getElementById('greenAnnouncements') : document.getElementById('redAnnouncements');
-    const nickname = nicknameInput.value.trim() || 'Гость';
+    const nickname = nicknameInput.value.trim();
 
     const text = textArea.value.trim();
-    if (!text) {
-      alert("Введите текст объявления!");
+    const imgEl = preview.querySelector('img');
+    const imgSrc = imgEl ? imgEl.src : null;
+
+    if (!text && !imgSrc) {
+      alert("Пожалуйста, добавьте текст или изображение.");
       return;
     }
 
-    // Получаем изображение из превью (если есть)
-    const imgElement = preview.querySelector('img');
-    const imgSrc = imgElement ? imgElement.src : null;
-
     const now = new Date();
 
-    try {
-      let content = `**Ник:** ${nickname}\n**Текст:** ${text}`;
-      if (imgSrc && imgSrc.startsWith('blob:')) {
-        content += '\n*Изображение приложено локально, поэтому не отправлено в Discord.*';
-      } else if (imgSrc) {
-        // Если есть публичный URL картинки, можем вставить её ссылку
-        content += `\n${imgSrc}`;
+    // Добавляем объявление на страницу
+    const announcement = announcementCounter(text, imgSrc, nickname, now, isGreen);
+    announcementsContainer.prepend(announcement);
+        
+
+    const webhookURL = isGreen
+      ? 'https://discord.com/api/webhooks/1400575916534530141/JEB23DFLpB0tjbSLxIrTUKFp4TIZDca_UKibt3zI3VTNasovMzZSS-7pV9k5YjhDNTMQ'
+      : 'https://discord.com/api/webhooks/1400575914089254933/ELFUVPHElOfYJCzQb56kMsIgvIgQrS735Ij5LbfRRXD3KiMV566Yup3cv8GIDWahVDzb';
+
+    const content = `**${isGreen ? "🟢Зеленое объявление" : "🔴Красное объявление"}**\n` +
+                    `Ник: ${nickname || 'Гость'}\n` +
+                    `Отправлено: ${formatDateTime(now)}`;
+
+    const formData = new FormData();
+    formData.append('payload_json', JSON.stringify({ content }));
+
+    if (imgSrc) {
+      try {
+        const response = await fetch(imgSrc);
+        const blob = await response.blob();
+        formData.append('file', blob, 'image.png');
+
+        // 🔽 Автоматическое сохранение картинки на компьютер
+        const link = document.createElement('a');
+        link.href = imgSrc;
+        link.download = `${new Date().toISOString().replace(/[:.]/g, '-')}.png`;
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+
+      } catch (e) {
+        console.warn('Ошибка загрузки изображения:', e);
       }
-      const webhookUrl = isGreen ? DISCORD_WEBHOOK_URL_GREEN : DISCORD_WEBHOOK_URL_RED;
-      await sendToDiscord(webhookUrl, content, nickname, null);
-
-      // Создаем и добавляем в контейнер объявление с нумерацией
-      const announcementElement = createAnnouncement(text, imgSrc, nickname, now, isGreen);
-      announcementsContainer.prepend(announcementElement);
-
-      saveAnnouncementsToStorage();
-
-      textArea.value = '';
-      preview.innerHTML = '';
-      showToast();
-    } catch {
-      // Ошибка отправки — уже показана alert'ом
     }
+
+    fetch(webhookURL, {
+      method: 'POST',
+      body: formData,
+    }).then(res => {
+      if (res.ok) {
+        showToast("✅ Отправлено в Discord!");
+        textArea.value = '';
+        preview.innerHTML = '';
+      } else {
+        showToast("❌ Ошибка отправки!");
+      }
+    }).catch(() => {
+      showToast("❌ Ошибка отправки!");
+    });
   }
 
-  function saveAnnouncementsToStorage() {
-    const greenContainer = document.getElementById('greenAnnouncements');
-    const redContainer = document.getElementById('redAnnouncements');
-
-    const greenAnnouncements = [];
-    for (const child of greenContainer.children) {
-      greenAnnouncements.push({
-        text: child.children[1].textContent,
-        imgSrc: child.querySelector('img')?.src || null,
-        nickname: child.children[0].textContent.split(' Ник: ')[1] || 'Гость',
-        date: child.children[2].textContent.replace('Отправлено: ', '')
-      });
-    }
-
-    const redAnnouncements = [];
-    for (const child of redContainer.children) {
-      redAnnouncements.push({
-        text: child.children[1].textContent,
-        imgSrc: child.querySelector('img')?.src || null,
-        nickname: child.children[0].textContent.split(' Ник: ')[1] || 'Гость',
-        date: child.children[2].textContent.replace('Отправлено: ', '')
-      });
-    }
-
-    localStorage.setItem('greenAnnouncements', JSON.stringify(greenAnnouncements));
-    localStorage.setItem('redAnnouncements', JSON.stringify(redAnnouncements));
-  }
-
-  function loadAnnouncementsFromStorage() {
-    const greenContainer = document.getElementById('greenAnnouncements');
-    const redContainer = document.getElementById('redAnnouncements');
-
-    const greenAnnouncements = JSON.parse(localStorage.getItem('greenAnnouncements')) || [];
-    const redAnnouncements = JSON.parse(localStorage.getItem('redAnnouncements')) || [];
-
-    for (const item of greenAnnouncements) {
-      const date = new Date(item.date);
-      const div = createAnnouncement(item.text, item.imgSrc, item.nickname, date, true);
-      greenContainer.appendChild(div);
-    }
-
-    for (const item of redAnnouncements) {
-      const date = new Date(item.date);
-      const div = createAnnouncement(item.text, item.imgSrc, item.nickname, date, false);
-      redContainer.appendChild(div);
-    }
-  }
-
-  function restoreCounterFromStorage() {
-    const allNumbers = [];
-    const greenContainer = document.getElementById('greenAnnouncements');
-    const redContainer = document.getElementById('redAnnouncements');
-
-    function extractNumberFromNickLine(text) {
-      const match = text.match(/^#(\d+)/);
-      return match ? parseInt(match[1]) : 0;
-    }
-
-    for (const child of greenContainer.children) {
-      allNumbers.push(extractNumberFromNickLine(child.children[0].textContent));
-    }
-    for (const child of redContainer.children) {
-      allNumbers.push(extractNumberFromNickLine(child.children[0].textContent));
-    }
-
-    if (allNumbers.length > 0) {
-      announcementCounter = Math.max(...allNumbers);
-      localStorage.setItem('announcementCounter', announcementCounter);
-    }
-  }
-
-  document.getElementById('greenInput').addEventListener('paste', (e) => {
-    extractImageFromPaste(e, document.getElementById('greenPreview'));
-  });
-
-  document.getElementById('redInput').addEventListener('paste', (e) => {
-    extractImageFromPaste(e, document.getElementById('redPreview'));
-  });
-
-  document.getElementById('sendGreen').addEventListener('click', () => sendAnnouncement(true));
-  document.getElementById('sendRed').addEventListener('click', () => sendAnnouncement(false));
-
-  window.addEventListener('load', () => {
-    loadAnnouncementsFromStorage();
-    restoreCounterFromStorage();
-  });
+  // ... остальной код без изменений
 </script>
 
 </body>
