--- a/index.html
+++ b/index.html
@@ -200,11 +200,87 @@
 <audio id="toastSound" src="https://actions.google.com/sounds/v1/cartoon/magic_chime.ogg"></audio>
 
 <script>
+  // Ник из localStorage
+  const nicknameInput = document.getElementById('nicknameInput');
+  nicknameInput.value = localStorage.getItem('nickname') || '';
+
+  nicknameInput.addEventListener('input', () => {
+    localStorage.setItem('nickname', nicknameInput.value);
+  });
+
+  function showToast(message = "✅ Отправлено!") {
+    const toast = document.getElementById("toast");
+    toast.textContent = message;
+    toast.classList.add("show");
+    document.getElementById("toastSound").play();
+
+    setTimeout(() => {
+      toast.classList.remove("show");
+    }, 3000);
+  }
+
+  function formatDateTime(date) {
+    return date.toLocaleString('ru-RU', {
+      year: 'numeric', month: '2-digit', day: '2-digit',
+      hour: '2-digit', minute: '2-digit', second: '2-digit'
+    });
+  }
+
+  // Извлечение картинки из paste в preview
+  function extractImageFromPaste(e, previewElement) {
+    const items = (e.clipboardData || e.originalEvent.clipboardData).items;
+    let imageFound = false;
+    for (const item of items) {
+      if (item.type.indexOf("image") === 0) {
+        const blob = item.getAsFile();
+        const URLObj = window.URL || window.webkitURL;
+        const source = URLObj.createObjectURL(blob);
+        previewElement.innerHTML = <img src="${source}" class="image-preview" />;
+        imageFound = true;
+        break;
+      }
+    }
+    if (!imageFound) {
+      previewElement.innerHTML = '';
+    }
+  }
+
+  // Создаем элемент объявления
+  function createAnnouncement(text, imgSrc, nickname, date, isGreen) {
+    const div = document.createElement('div');
+    div.classList.add('announcement');
+    div.classList.add(isGreen ? 'green-announcement' : 'red-announcement');
+
+    const nickLine = document.createElement('div');
+    nickLine.textContent = Ник: ${nickname || 'Гость'};
+    nickLine.style.fontWeight = '700';
+    div.appendChild(nickLine);
+
+    const textLine = document.createElement('div');
+    textLine.textContent = text;
+    div.appendChild(textLine);
+
+    if (imgSrc) {
+      const img = document.createElement('img');
+      img.src = imgSrc;
+      img.className = 'image-preview';
+      div.appendChild(img);
+    }
+
+    const metaLine = document.createElement('div');
+    metaLine.className = 'meta';
+    metaLine.textContent = Отправлено: ${formatDateTime(date)};
+    div.appendChild(metaLine);
+
+    return div;
+  }
+
+  // Обработка отправки
   async function sendAnnouncement(isGreen) {
     const textArea = isGreen ? document.getElementById('greenInput') : document.getElementById('redInput');
     const preview = isGreen ? document.getElementById('greenPreview') : document.getElementById('redPreview');
     const announcementsContainer = isGreen ? document.getElementById('greenAnnouncements') : document.getElementById('redAnnouncements');
-    const nickname = document.getElementById('nicknameInput').value.trim();
+    const nickname = nicknameInput.value.trim();
 
     const text = textArea.value.trim();
     const imgEl = preview.querySelector('img');
@@ -218,26 +294,40 @@
     const now = new Date();
 
     // Добавляем объявление на страницу
-    const announcement = announcementCounter(text, imgSrc, nickname, now, isGreen);
+    const announcement = createAnnouncement(text, imgSrc, nickname, now, isGreen);
     announcementsContainer.prepend(announcement);
 
-    const webhookURL = isGreen
-      ? 'https://discord.com/api/webhooks/1400575916534530141/JEB23DFLpB0tjbSLxIrTUKFp4TIZDca_UKibt3zI3VTNasovMzZSS-7pV9k5YjhDNTMQ'
-      : 'https://discord.com/api/webhooks/1400575914089254933/ELFUVPHElOfYJCzQb56kMsIgvIgQrS735Ij5LbfRRXD3KiMV566Yup3cv8GIDWahVDzb';
+    // --- Отправка в Discord webhook ---
+    // Замените URL на свои Discord webhook URL
+    const webhookURL = isGreen ? 'https://discord.com/api/webhooks/1400575916534530141/JEB23DFLpB0tjbSLxIrTUKFp4TIZDca_UKibt3zI3VTNasovMzZSS-7pV9k5YjhDNTMQ' : 'https://discord.com/api/webhooks/1400575914089254933/ELFUVPHElOfYJCzQb56kMsIgvIgQrS735Ij5LbfRRXD3KiMV566Yup3cv8GIDWahVDzb';
 
-    const content = `**${isGreen ? "🟢Зеленое объявление" : "🔴Красное объявление"}**\n` +
-                    `Ник: ${nickname || 'Гость'}\n` +
-                    `Отправлено: ${formatDateTime(now)}\n\n${text}`;
+    // Формируем содержимое для Discord
+    const content = **${isGreen ? "🟢Зеленое объявление" : "🔴Красное объявление"}**\n +
+                    Ник: ${nickname || 'Гость'}\n +
+                    Отправлено: ${formatDateTime(now)};
 
-    const fullContent = imgSrc ? content + `\n${imgSrc}` : content;
+    const formData = new FormData();
+    formData.append('payload_json', JSON.stringify({ content }));
+
+    // Если есть изображение, добавим как файл (Discord webhook поддерживает это)
+    if (imgSrc) {
+      try {
+        // Получаем blob с картинки
+        const response = await fetch(imgSrc);
+        const blob = await response.blob();
+        formData.append('file', blob, 'image.png');
+      } catch (e) {
+        console.warn('Ошибка загрузки изображения для Discord:', e);
+      }
+    }
 
     fetch(webhookURL, {
       method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ content: fullContent }),
+      body: formData,
     }).then(res => {
       if (res.ok) {
         showToast("✅ Отправлено в Discord!");
+        // Очистка формы и превью
         textArea.value = '';
         preview.innerHTML = '';
       } else {
@@ -247,6 +337,17 @@
       showToast("❌ Ошибка отправки!");
     });
   }
+
+  document.getElementById('greenInput').addEventListener('paste', (e) => {
+    extractImageFromPaste(e, document.getElementById('greenPreview'));
+  });
+
+  document.getElementById('redInput').addEventListener('paste', (e) => {
+    extractImageFromPaste(e, document.getElementById('redPreview'));
+  });
+
+  document.getElementById('sendGreen').addEventListener('click', () => sendAnnouncement(true));
+  document.getElementById('sendRed').addEventListener('click', () => sendAnnouncement(false));
 </script>
 
 </body>
